--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBP8P6YW8S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZBP8P6YW8S');
+</script>
 <meta charset=UTF-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <title>Leela Naga Mallika Modugula - Portfolio</title>
