--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <canvas id=particles></canvas>
 <div class=action-buttons>
 <a href=#contact class=action-button data-label="Contact Me">📬</a>
-<a href="https://drive.google.com/file/d/1po3QVQzADMZs6Z6tBopIJGaD-N2b1H0e/view?usp=sharing" target=_blank class="action-button resume-download" data-label="Download Resume" download>📄</a>
+<a href="https://drive.google.com/file/d/1po3QVQzADMZs6Z6tBopIJGaD-N2b1H0e/view?usp=shar" target=_blank class="action-button resume-download" data-label="Download Resume" download>📄</a>
 </div>
 <nav class=sidebar>
 <ul class=nav-links>
@@ -82,7 +82,7 @@
 <div class=hero-subtitle>Crafting Scalable Solutions with Code & Cloud</div>
 <div class=recommendation-caption id=recommendationCaption></div>
 <div class=button-group>
-<a href="https://drive.google.com/file/d/1po3QVQzADMZs6Z6tBopIJGaD-N2b1H0e/view?usp=sharing" target=_blank class="hero-button resume-download" download>Download Resume</a>
+<a href="https://drive.google.com/file/d/1po3QVQzADMZs6Z6tBopIJGaD-N2b1H0e/view?usp=shar" target=_blank class="hero-button resume-download" download>Download Resume</a>
 <a href=#contact class=hero-button>Connect with Me</a>
 </div>
 </div>
