--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ I believe in building with purpose, learning through curiosity, and growing with
 <div class=skill data-aos=fade-up data-aos-delay=1400>CI/CD</div>
 <div class=skill data-aos=fade-up data-aos-delay=1450>Python</div>
 <div class=skill data-aos=fade-up data-aos-delay=1500>Pandas & NumPy</div>
+<div class=skill data-aos=fade-up data-aos-delay=1550>PowerBI</div>
+<div class=skill data-aos=fade-up data-aos-delay=1600>Tableau</div>
 </div>
 </section>
 <section id=certifications data-aos=fade-up>
@@ -204,6 +206,11 @@ I believe in building with purpose, learning through curiosity, and growing with
 <div class=project-item data-aos=fade-up data-aos-delay=200>
 <a href=https://medium.com/@mallikamodugula/from-data-to-dashboard-a-real-world-ml-project-in-retail-analytics-2f46065eb7ba target=_blank><h3>Smart Retail Intelligence and Forecasting System</h3></a>
 <p>Built a retail analytics system using Python and Streamlit with automated ETL, interactive dashboards, and sales forecasting. Trained XGBoost and Ridge Regression models with >90% accuracy, and enabled CSV uploads, outlet comparisons, and PDF export features.
+</p>
+</div>
+<div class=project-item data-aos=fade-up data-aos-delay=300>
+<a href=https://github.com/Mallika28/hotel-revenue-insights-dashboard target=_blank><h3>Revenue Insights in Hospitality domain</h3></a>
+<p>Created end-to-end Power BI dashboards that combine hotel revenue KPIs and sales insights across markets, using dynamic visuals, drill-down filters, and automated data refreshes to help teams spot trends, compare performance, and save hours of manual reporting effort.
 </p>
 </div>
 </div>
